<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dispatch_bg">

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wel"
        android:layout_gravity="center"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:layout_marginTop="50sp"/>

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dis_log"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:layout_marginTop="0sp"/>

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_pass"
        android:layout_gravity="center"
        android:textSize="19sp"
        android:textColor="@color/white"
        android:layout_marginTop="30sp"/>

    <EditText
        android:id="@+id/un_btn"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginTop="30sp"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:drawablePadding="10dp"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:hint="Username"
        android:background="@color/white"
        android:singleLine="true"
        android:drawableLeft="@drawable/user_icon"/>

    <EditText
        android:id="@+id/pwd_btn"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginTop="30sp"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:drawablePadding="10dp"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:hint="Password"
        android:background="@color/white"
        android:singleLine="true"
        android:drawableLeft="@drawable/password_icon"/>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30sp"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:textColor="@color/white"
        android:text="Log In"
        android:textStyle="bold"
        android:background="@color/blue"/>



</LinearLayout>