<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="325sp"
    android:layout_height="match_parent"
    android:background="@drawable/dispatch_bg">

    <ImageView
        android:id="@+id/menu_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/menu_logo"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp">

        <ImageView
            android:id="@+id/menu_trips_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_alignParentLeft="true"
            android:src="@drawable/trips_icon"/>

        <TextView
            android:id="@+id/trips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trips"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_toRightOf="@+id/menu_trips_icon"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20sp"/>


        <TextView
            android:id="@+id/trip_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="t.no"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20sp"
            android:background="@drawable/trips_button_bg"/>



    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@color/white"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        android:layout_marginTop="15sp"
        android:layout_marginBottom="15sp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/menu_map_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_alignParentLeft="true"
            android:src="@drawable/map_icon"/>

        <TextView
            android:id="@+id/map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/menu_map_icon"
            android:layout_marginLeft="20sp"/>


    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@color/white"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        android:layout_marginTop="15sp"
        android:layout_marginBottom="15sp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/menu_logout_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_alignParentLeft="true"
            android:background="@drawable/logout_icon"/>

        <TextView
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_toRightOf="@+id/menu_logout_icon"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20sp"/>


    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@color/white"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        android:layout_marginTop="15sp"
       />

    <TextView
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_toRightOf="@+id/menu_logout_icon"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="10sp"/>


</LinearLayout>